--- a/.github/workflows/yolo_actions.yml
+++ b/.github/workflows/yolo_actions.yml
@@ -26,8 +26,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        pytest --cov=autopycoin --cov-report=xml .
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        fail_ci_if_error: false
+        pytest
